Completed the login

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -125,7 +125,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Company"
-                    android:inputType="phone"
+                    android:inputType="text"
                     android:maxLength="10"
                     android:textSize="@dimen/text_size_16"
                     android:maxLines="1"
@@ -142,7 +142,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Designation"
-                    android:inputType="phone"
+                    android:inputType="text"
                     android:maxLength="10"
                     android:textSize="@dimen/text_size_16"
                     android:maxLines="1"
