Created the updation of user profile

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -81,6 +81,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/caldroid_transparent"
+                        android:enabled="false"
                         android:textColor="@color/colorAccent"
                         android:textSize="14sp" />
 
@@ -105,6 +106,7 @@
                         android:id="@+id/user_profile_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:enabled="false"
                         android:background="@color/caldroid_transparent"
                         android:textColor="@color/colorAccent"
                         android:textSize="14sp" />
@@ -131,6 +133,7 @@
                         android:id="@+id/user_profile_company"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:enabled="false"
                         android:background="@color/caldroid_transparent"
                         android:textColor="@color/colorAccent"
                         android:textSize="14sp" />
@@ -190,6 +193,7 @@
                     android:id="@+id/user_profile_designation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:background="@color/caldroid_transparent"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
@@ -217,7 +221,9 @@
                     android:id="@+id/user_profile_presences"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:focusable="false"
+                    android:inputType="none"
                     android:background="@color/caldroid_transparent"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
@@ -245,6 +251,9 @@
                     android:id="@+id/user_profile_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:inputType="number"
+                    android:maxLength="10"
                     android:background="@color/caldroid_transparent"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
@@ -272,26 +281,29 @@
                     android:id="@+id/user_profile_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:background="@color/caldroid_transparent"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
 
             </LinearLayout>
 
+            <Button
+                android:id="@+id/user_profile_edt_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorPrimary"
+                android:textAllCaps="false"
+                android:layout_marginBottom="5dp"
+                android:text="Save"
+                android:visibility="gone"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_horizontal"/>
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
 
-    <Button
-        android:id="@+id/user_profile_edt_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorPrimary"
-        android:textAllCaps="false"
-        android:layout_marginBottom="5dp"
-        android:text="Edit"
-        android:visibility="gone"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
