Completed the updating of presences

--- a/app/src/main/res/menu/activity_menu.xml
+++ b/app/src/main/res/menu/activity_menu.xml
@@ -13,4 +13,9 @@
         android:title="@string/log_out"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/stop_service_menu_item"
+        android:title="@string/stop_tracking"
+        app:showAsAction="never" />
+
 </menu>
